--- a/Billing.html
+++ b/Billing.html
@@ -2,7 +2,7 @@
   <section>
     <div class="product Box-root">
       <div class="description Box-root">
-        <h3>Subscription to Starter plan successful!</h3>
+        <h3>Subscription Successful!</h3>
       </div>
     </div>
     <form action="/create-portal-session" method="POST">
